syntax = "proto3";

option csharp_namespace = "CallService";

import "google/protobuf/empty.proto";

package callcontrollerserviceAPI;

service CallControllerAPI {
  rpc GetNextCall (google.protobuf.Empty) returns (CallReply);
  rpc GetListCalls (google.protobuf.Empty) returns (stream CallReply);
  rpc GetListNextCalls (google.protobuf.Empty) returns (stream CallReply);
}

message CallReply{
  string Name = 1;
  string DateTime = 2;
}
